初始化提交：DOM-Magic项目基础结构

--- a/package.json
+++ b/package.json
@@ -1,15 +1,37 @@
 {
   "name": "dom-magic",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "0.1.0",
+  "description": "轻量级虚拟DOM差异计算引擎",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest",
+    "docs:dev": "vite docs",
+    "docs:build": "vite build docs",
+    "docs:preview": "vite preview docs"
   },
+  "keywords": [
+    "virtual-dom",
+    "diff",
+    "dom",
+    "javascript",
+    "typescript"
+  ],
+  "author": "Your Name",
+  "license": "MIT",
   "devDependencies": {
-    "typescript": "~5.7.2",
-    "vite": "^6.1.0"
+    "@types/jest": "^29.5.0",
+    "@types/node": "^18.15.11",
+    "jest": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.4",
+    "vite": "^4.3.0"
+  },
+  "dependencies": {
+    "clipboard": "^2.0.11",
+    "prismjs": "^1.29.0"
   }
 }
