--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "outDir": "./dist",
     "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]
+      "@dom-magic": ["src/main"],
+      "@base": ["src/base"],
     }
   },
   "include": ["src"],
